<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            style="@style/Widget.TableCell"
            android:text="@string/label_people" />

        <EditText
            android:id="@+id/text_people"
            style="@style/Widget.TableCell" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/Widget.TableCell"
            android:text="@string/label_country" />

        <EditText
            android:id="@+id/text_country"
            style="@style/Widget.TableCell" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/Widget.TableCell"
            android:text="@string/label_bean" />

        <EditText
            android:id="@+id/text_bean"
            style="@style/Widget.TableCell" />
    </TableRow>


    <TableRow>

        <TextView
            style="@style/Widget.TableCell"
            android:text="@string/label_begin_weight" />

        <EditText
            android:id="@+id/text_begin_weight"
            style="@style/Widget.TableCell"
            android:inputType="number" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/Widget.TableCell"
            android:text="@string/label_end_weight" />

        <EditText
            android:id="@+id/text_end_weight"
            style="@style/Widget.TableCell"
            android:inputType="number" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/Widget.TableCell"
            android:text="@string/label_weight_ratio" />

        <TextView
            android:id="@+id/text_weight_ratio"
            style="@style/Widget.TableCell" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/Widget.TableCell"
            android:text="@string/label_temperature" />

        <EditText
            android:id="@+id/text_env_temperature"
            style="@style/Widget.TableCell"
            android:inputType="number" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/Widget.TableCell"
            android:text="@string/label_date" />

        <TextView
            android:id="@+id/text_date"
            style="@style/Widget.TableCell" />
    </TableRow>


    <TableRow>

        <TextView
            style="@style/Widget.TableCell"
            android:text="@string/label_begin_time" />

        <TextView
            android:id="@+id/text_begin_time"
            style="@style/Widget.TableCell" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/Widget.TableCell"
            android:text="@string/label_end_time" />

        <TextView
            android:id="@+id/text_end_time"
            style="@style/Widget.TableCell" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/Widget.TableCell"
            android:text="@string/label_start_fire" />

        <TextView
            android:id="@+id/text_start_fire"
            style="@style/Widget.TableCell" />
    </TableRow>

</TableLayout>

