<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_setting"
        android:checkable="false"
        android:orderInCategory="1"
        android:title="@string/action_setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_plot"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="100"
        android:title="@string/action_plot"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_form"
        android:icon="@drawable/ic_menu_form"
        android:orderInCategory="100"
        android:title="@string/action_form"
        app:showAsAction="always" />

</menu>
