<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background3" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/actionbar_background"
        app:popupTheme="@style/AppTheme.PopupOverlay">

    </android.support.v7.widget.Toolbar>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:padding="16dp"
        android:shrinkColumns="0"
        android:stretchColumns="1,3">

        <TableRow android:gravity="center_vertical">

            <TextView
                android:text="@string/label_country"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/default_textsize" />

            <EditText
                android:id="@+id/input_country"
                android:layout_margin="8dp"
                android:layout_span="3"
                android:background="@drawable/edittext_background"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/default_textsize" />
        </TableRow>

        <TableRow android:gravity="center_vertical">

            <TextView
                android:text="@string/label_bean"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/default_textsize" />

            <EditText
                android:id="@+id/input_bean"
                android:layout_margin="8dp"
                android:layout_span="3"
                android:background="@drawable/edittext_background"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/default_textsize" />
        </TableRow>

        <TableRow android:gravity="center_vertical">

            <TextView
                android:text="@string/label_people"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/default_textsize" />

            <EditText
                android:id="@+id/input_people"
                android:layout_margin="8dp"
                android:layout_span="3"
                android:background="@drawable/edittext_background"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/default_textsize" />
        </TableRow>

        <TableRow android:gravity="center_vertical">

            <TextView
                android:text="@string/label_begin_weight"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/default_textsize" />

            <EditText
                android:id="@+id/input_weight"
                android:layout_width="0dp"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_background"
                android:inputType="number"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/default_textsize" />

            <TextView
                android:text="@string/label_temperature"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/default_textsize" />

            <EditText
                android:id="@+id/input_temperature"
                android:layout_width="0dp"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_background"
                android:inputType="number"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/default_textsize" />

        </TableRow>

    </TableLayout>

    <FrameLayout
        android:id="@+id/btn_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/table"
        android:paddingTop="8dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#40ffffff" />

        <Button
            android:id="@+id/btn_startup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/btn_primary_background"
            android:drawableStart="@drawable/ic_coffee_bean_small"
            android:minHeight="0dp"
            android:minWidth="100dp"
            android:text="@string/btn_start_roast"
            android:textAllCaps="false"
            android:textColor="@color/text_white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>


    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_row"
        android:background="#13121a">

    </ListView>
</RelativeLayout>
